--- a/layouts/default.styl
+++ b/layouts/default.styl
@@ -56,3 +56,20 @@
 		max-height 100%
 		padding 16px 16px 0
 		defaultTransition()
+
+	&__notifications
+		position absolute
+		top 24px
+		right 0
+		left 0
+		display flex
+		justify-content center
+		align-items center
+		flex-direction column
+
+	&__notification
+		max-width 600px
+		margin 0 0 8px
+
+		&:last-child
+			margin-bottom 0
