--- a/components/modal/modal.styl
+++ b/components/modal/modal.styl
@@ -8,7 +8,14 @@
 	display flex
 	justify-content center
 	align-items center
+	min-width 320px
 	background rgba(0, 0, 0, .5)
+
+	&__tile
+		display flex
+		flex-direction column
+		max-width 95%
+		max-height 85%
 
 	&__icon
 		max-width 100%
