feat: small redesign (background, colors)

--- a/assets/stylus/colors.styl
+++ b/assets/stylus/colors.styl
@@ -5,7 +5,7 @@
 			--secondary-text #cccccc
 			--accent-text #ffffff
 			--contrast-text #ffffff
-			--primary-background #202020
+			--primary-background #201e2f
 			--secondary-background #1d1d1d
 			--accent-background #333333
 			--shadow rgba(0, 0, 0, .14)
@@ -13,7 +13,7 @@
 			--important #ff5d5d
 
 		&_red
-			--primary #ff5d5d
-			--primary-dark darken(#ff5d5d, 20%)
-			--primary-light lighten(#ff5d5d, 20%)
+			--primary #645fac
+			--primary-dark darken(#645fac, 20%)
+			--primary-light lighten(#645fac, 20%)
 			--secondary #747474
