--- a/components/player/player.styl
+++ b/components/player/player.styl
@@ -36,7 +36,7 @@
 		flex-grow 0
 		flex-shrink 0
 		margin-right 12px
-		color var(--primary)
+		color var(--primary-light)
 		font-size 16px
 		font-weight 600
 
@@ -165,7 +165,7 @@
 		padding 16px
 		color #eaeaea
 		cursor pointer
-		background #181818
+		background #2f2e40
 		border none
 		border-radius 3px
 		outline none
