--- a/layouts/default.styl
+++ b/layouts/default.styl
@@ -23,6 +23,7 @@
 		height 100%
 
 	&__body
+		position relative
 		overflow hidden auto
 		height 100%
 		min-height 100%
@@ -31,6 +32,17 @@
 		font-size 14px
 		line-height 1.5
 		background #0f1014 url('/bg.svg') no-repeat fixed 50% / cover
+
+		&:before
+			content ''
+			position absolute
+			top 0
+			right 0
+			left 0
+			bottom 0
+			z-index -1
+			display block
+			background rgba(0, 0, 0, .2)
 
 		&_overflow
 			&_hidden
