feat: update select and player-buttons styles

--- a/components/select/select.styl
+++ b/components/select/select.styl
@@ -6,6 +6,8 @@
 		overflow hidden
 		padding 8px 24px
 		color var(--secondary-text)
+		font-size 14px
+		font-weight 600
 		white-space nowrap
 		text-transform uppercase
 		text-overflow ellipsis
