--- a/components/player-buttons/player-buttons.styl
+++ b/components/player-buttons/player-buttons.styl
@@ -23,11 +23,12 @@
 		margin 0 4px
 		padding 6px 8px
 		color var(--primary-text)
-		font-size 14px
-		font-weight 400
+		font-size 13px
+		font-weight 600
 		text-align center
 		white-space nowrap
 		text-decoration none
+		text-transform uppercase
 		cursor pointer
 		background rgba(255, 255, 255, .04)
 		border none
