--- a/components/player/player.styl
+++ b/components/player/player.styl
@@ -155,6 +155,7 @@
 			margin-right 0
 
 	&__play-button
+		position relative
 		display block
 		flex-shrink 0
 		width 82px
@@ -166,6 +167,7 @@
 		color #eaeaea
 		cursor pointer
 		background #2f2e40
+		background-size cover
 		border none
 		border-radius 3px
 		outline none
@@ -176,7 +178,21 @@
 		&:hover
 			color #ffffff
 
+		&:before
+			content ''
+			position absolute
+			top 0
+			right 0
+			left 0
+			bottom 0
+			z-index 1
+			display block
+			background #2f2e40
+			opacity .7
+
 		& .icon
+			position relative
+			z-index 2
 			display block
 			width 50px
 			height 50px
